src/COOLParser.py
# Generated from C:\Software\ANTLR\cool\COOL.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class COOLParser ( Parser ):

    grammarFileName = "COOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "'{'", "'}'", "'('", "','", "')'", 
                     "':'", "'@'", "'.'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<-'", "'=>'", "'+'", "'-'", "'*'", "'/'", "'<'", 
                     "'<='", "'='", "'~'", "'(*'", "'*)'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "CLASS", "ELSE", "FALSE", 
                      "FI", "IF", "IN", "INHERITS", "ISVOID", "LET", "LOOP", 
                      "POOL", "THEN", "WHILE", "CASE", "ESAC", "NEW", "OF", 
                      "NOT", "TRUE", "STRING", "INT", "TYPEID", "OBJECTID", 
                      "ASSIGNMENT", "CASE_ARROW", "ADD", "MINUS", "MULTIPLY", 
                      "DIVISION", "LESS_THAN", "LESS_EQUAL", "EQUAL", "INTEGER_NEGATIVE", 
                      "OPEN_COMMENT", "CLOSE_COMMENT", "COMMENT", "ONE_LINE_COMMENT", 
                      "WHITESPACE" ]

    RULE_program = 0
    RULE_programBlocks = 1
    RULE_classDefine = 2
    RULE_feature = 3
    RULE_formal = 4
    RULE_expression = 5

    ruleNames =  [ "program", "programBlocks", "classDefine", "feature", 
                   "formal", "expression" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    CLASS=10
    ELSE=11
    FALSE=12
    FI=13
    IF=14
    IN=15
    INHERITS=16
    ISVOID=17
    LET=18
    LOOP=19
    POOL=20
    THEN=21
    WHILE=22
    CASE=23
    ESAC=24
    NEW=25
    OF=26
    NOT=27
    TRUE=28
    STRING=29
    INT=30
    TYPEID=31
    OBJECTID=32
    ASSIGNMENT=33
    CASE_ARROW=34
    ADD=35
    MINUS=36
    MULTIPLY=37
    DIVISION=38
    LESS_THAN=39
    LESS_EQUAL=40
    EQUAL=41
    INTEGER_NEGATIVE=42
    OPEN_COMMENT=43
    CLOSE_COMMENT=44
    COMMENT=45
    ONE_LINE_COMMENT=46
    WHITESPACE=47

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programBlocks(self):
            return self.getTypedRuleContext(COOLParser.ProgramBlocksContext,0)


        def getRuleIndex(self):
            return COOLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = COOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 12
            self.programBlocks()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramBlocksContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return COOLParser.RULE_programBlocks

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class ClassesContext(ProgramBlocksContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ProgramBlocksContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def classDefine(self):
            return self.getTypedRuleContext(COOLParser.ClassDefineContext,0)

        def programBlocks(self):
            return self.getTypedRuleContext(COOLParser.ProgramBlocksContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClasses" ):
                listener.enterClasses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClasses" ):
                listener.exitClasses(self)


    class EofContext(ProgramBlocksContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ProgramBlocksContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def EOF(self):
            return self.getToken(COOLParser.EOF, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEof" ):
                listener.enterEof(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEof" ):
                listener.exitEof(self)



    def programBlocks(self):

        localctx = COOLParser.ProgramBlocksContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programBlocks)
        try:
            self.state = 19
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [COOLParser.CLASS]:
                localctx = COOLParser.ClassesContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 14
                self.classDefine()
                self.state = 15
                self.match(COOLParser.T__0)
                self.state = 16
                self.programBlocks()
                pass
            elif token in [COOLParser.EOF]:
                localctx = COOLParser.EofContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 18
                self.match(COOLParser.EOF)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefineContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(COOLParser.CLASS, 0)

        def TYPEID(self, i:int=None):
            if i is None:
                return self.getTokens(COOLParser.TYPEID)
            else:
                return self.getToken(COOLParser.TYPEID, i)

        def INHERITS(self):
            return self.getToken(COOLParser.INHERITS, 0)

        def feature(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.FeatureContext)
            else:
                return self.getTypedRuleContext(COOLParser.FeatureContext,i)


        def getRuleIndex(self):
            return COOLParser.RULE_classDefine

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDefine" ):
                listener.enterClassDefine(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDefine" ):
                listener.exitClassDefine(self)




    def classDefine(self):

        localctx = COOLParser.ClassDefineContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDefine)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self.match(COOLParser.CLASS)
            self.state = 22
            self.match(COOLParser.TYPEID)
            self.state = 25
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==COOLParser.INHERITS:
                self.state = 23
                self.match(COOLParser.INHERITS)
                self.state = 24
                self.match(COOLParser.TYPEID)


            self.state = 27
            self.match(COOLParser.T__1)
            self.state = 33
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==COOLParser.OBJECTID:
                self.state = 28
                self.feature()
                self.state = 29
                self.match(COOLParser.T__0)
                self.state = 35
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 36
            self.match(COOLParser.T__2)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FeatureContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return COOLParser.RULE_feature

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class MethodContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECTID(self):
            return self.getToken(COOLParser.OBJECTID, 0)
        def TYPEID(self):
            return self.getToken(COOLParser.TYPEID, 0)
        def expression(self):
            return self.getTypedRuleContext(COOLParser.ExpressionContext,0)

        def formal(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.FormalContext)
            else:
                return self.getTypedRuleContext(COOLParser.FormalContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethod" ):
                listener.enterMethod(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethod" ):
                listener.exitMethod(self)


    class PropertyContext(FeatureContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.FeatureContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECTID(self):
            return self.getToken(COOLParser.OBJECTID, 0)
        def TYPEID(self):
            return self.getToken(COOLParser.TYPEID, 0)
        def ASSIGNMENT(self):
            return self.getToken(COOLParser.ASSIGNMENT, 0)
        def expression(self):
            return self.getTypedRuleContext(COOLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProperty" ):
                listener.enterProperty(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProperty" ):
                listener.exitProperty(self)



    def feature(self):

        localctx = COOLParser.FeatureContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_feature)
        self._la = 0 # Token type
        try:
            self.state = 67
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                localctx = COOLParser.MethodContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 38
                self.match(COOLParser.OBJECTID)
                self.state = 39
                self.match(COOLParser.T__3)
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==COOLParser.OBJECTID:
                    self.state = 40
                    self.formal()
                    self.state = 45
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==COOLParser.T__4:
                        self.state = 41
                        self.match(COOLParser.T__4)
                        self.state = 42
                        self.formal()
                        self.state = 47
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 52
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 53
                self.match(COOLParser.T__5)
                self.state = 54
                self.match(COOLParser.T__6)
                self.state = 55
                self.match(COOLParser.TYPEID)
                self.state = 56
                self.match(COOLParser.T__1)
                self.state = 57
                self.expression(0)
                self.state = 58
                self.match(COOLParser.T__2)
                pass

            elif la_ == 2:
                localctx = COOLParser.PropertyContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 60
                self.match(COOLParser.OBJECTID)
                self.state = 61
                self.match(COOLParser.T__6)
                self.state = 62
                self.match(COOLParser.TYPEID)
                self.state = 65
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==COOLParser.ASSIGNMENT:
                    self.state = 63
                    self.match(COOLParser.ASSIGNMENT)
                    self.state = 64
                    self.expression(0)


                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FormalContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OBJECTID(self):
            return self.getToken(COOLParser.OBJECTID, 0)

        def TYPEID(self):
            return self.getToken(COOLParser.TYPEID, 0)

        def getRuleIndex(self):
            return COOLParser.RULE_formal

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFormal" ):
                listener.enterFormal(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFormal" ):
                listener.exitFormal(self)




    def formal(self):

        localctx = COOLParser.FormalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_formal)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(COOLParser.OBJECTID)
            self.state = 70
            self.match(COOLParser.T__6)
            self.state = 71
            self.match(COOLParser.TYPEID)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return COOLParser.RULE_expression

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)


    class LetInContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def LET(self):
            return self.getToken(COOLParser.LET, 0)
        def OBJECTID(self, i:int=None):
            if i is None:
                return self.getTokens(COOLParser.OBJECTID)
            else:
                return self.getToken(COOLParser.OBJECTID, i)
        def TYPEID(self, i:int=None):
            if i is None:
                return self.getTokens(COOLParser.TYPEID)
            else:
                return self.getToken(COOLParser.TYPEID, i)
        def IN(self):
            return self.getToken(COOLParser.IN, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)

        def ASSIGNMENT(self, i:int=None):
            if i is None:
                return self.getTokens(COOLParser.ASSIGNMENT)
            else:
                return self.getToken(COOLParser.ASSIGNMENT, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLetIn" ):
                listener.enterLetIn(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLetIn" ):
                listener.exitLetIn(self)


    class MinusContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)

        def MINUS(self):
            return self.getToken(COOLParser.MINUS, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMinus" ):
                listener.enterMinus(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMinus" ):
                listener.exitMinus(self)


    class StringContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def STRING(self):
            return self.getToken(COOLParser.STRING, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterString" ):
                listener.enterString(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitString" ):
                listener.exitString(self)


    class IsvoidContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ISVOID(self):
            return self.getToken(COOLParser.ISVOID, 0)
        def expression(self):
            return self.getTypedRuleContext(COOLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIsvoid" ):
                listener.enterIsvoid(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIsvoid" ):
                listener.exitIsvoid(self)


    class WhileContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def WHILE(self):
            return self.getToken(COOLParser.WHILE, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)

        def LOOP(self):
            return self.getToken(COOLParser.LOOP, 0)
        def POOL(self):
            return self.getToken(COOLParser.POOL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhile" ):
                listener.enterWhile(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhile" ):
                listener.exitWhile(self)


    class DivisionContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)

        def DIVISION(self):
            return self.getToken(COOLParser.DIVISION, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDivision" ):
                listener.enterDivision(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDivision" ):
                listener.exitDivision(self)


    class NegativeContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INTEGER_NEGATIVE(self):
            return self.getToken(COOLParser.INTEGER_NEGATIVE, 0)
        def expression(self):
            return self.getTypedRuleContext(COOLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNegative" ):
                listener.enterNegative(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNegative" ):
                listener.exitNegative(self)


    class BoolNotContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NOT(self):
            return self.getToken(COOLParser.NOT, 0)
        def expression(self):
            return self.getTypedRuleContext(COOLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBoolNot" ):
                listener.enterBoolNot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBoolNot" ):
                listener.exitBoolNot(self)


    class LessThanContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)

        def LESS_THAN(self):
            return self.getToken(COOLParser.LESS_THAN, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLessThan" ):
                listener.enterLessThan(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLessThan" ):
                listener.exitLessThan(self)


    class BlockContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBlock" ):
                listener.enterBlock(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBlock" ):
                listener.exitBlock(self)


    class IdContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECTID(self):
            return self.getToken(COOLParser.OBJECTID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId" ):
                listener.enterId(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId" ):
                listener.exitId(self)


    class MultiplyContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)

        def MULTIPLY(self):
            return self.getToken(COOLParser.MULTIPLY, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiply" ):
                listener.enterMultiply(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiply" ):
                listener.exitMultiply(self)


    class IfContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def IF(self):
            return self.getToken(COOLParser.IF, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)

        def THEN(self):
            return self.getToken(COOLParser.THEN, 0)
        def ELSE(self):
            return self.getToken(COOLParser.ELSE, 0)
        def FI(self):
            return self.getToken(COOLParser.FI, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf" ):
                listener.enterIf(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf" ):
                listener.exitIf(self)


    class CaseContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def CASE(self):
            return self.getToken(COOLParser.CASE, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)

        def OF(self):
            return self.getToken(COOLParser.OF, 0)
        def ESAC(self):
            return self.getToken(COOLParser.ESAC, 0)
        def OBJECTID(self, i:int=None):
            if i is None:
                return self.getTokens(COOLParser.OBJECTID)
            else:
                return self.getToken(COOLParser.OBJECTID, i)
        def TYPEID(self, i:int=None):
            if i is None:
                return self.getTokens(COOLParser.TYPEID)
            else:
                return self.getToken(COOLParser.TYPEID, i)
        def CASE_ARROW(self, i:int=None):
            if i is None:
                return self.getTokens(COOLParser.CASE_ARROW)
            else:
                return self.getToken(COOLParser.CASE_ARROW, i)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCase" ):
                listener.enterCase(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCase" ):
                listener.exitCase(self)


    class OwnMethodCallContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECTID(self):
            return self.getToken(COOLParser.OBJECTID, 0)
        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOwnMethodCall" ):
                listener.enterOwnMethodCall(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOwnMethodCall" ):
                listener.exitOwnMethodCall(self)


    class AddContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)

        def ADD(self):
            return self.getToken(COOLParser.ADD, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdd" ):
                listener.enterAdd(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdd" ):
                listener.exitAdd(self)


    class NewContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def NEW(self):
            return self.getToken(COOLParser.NEW, 0)
        def TYPEID(self):
            return self.getToken(COOLParser.TYPEID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNew" ):
                listener.enterNew(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNew" ):
                listener.exitNew(self)


    class ParenthesesContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self):
            return self.getTypedRuleContext(COOLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParentheses" ):
                listener.enterParentheses(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParentheses" ):
                listener.exitParentheses(self)


    class AssignmentContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def OBJECTID(self):
            return self.getToken(COOLParser.OBJECTID, 0)
        def ASSIGNMENT(self):
            return self.getToken(COOLParser.ASSIGNMENT, 0)
        def expression(self):
            return self.getTypedRuleContext(COOLParser.ExpressionContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignment" ):
                listener.enterAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignment" ):
                listener.exitAssignment(self)


    class FalseContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def FALSE(self):
            return self.getToken(COOLParser.FALSE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFalse" ):
                listener.enterFalse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFalse" ):
                listener.exitFalse(self)


    class IntContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def INT(self):
            return self.getToken(COOLParser.INT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInt" ):
                listener.enterInt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInt" ):
                listener.exitInt(self)


    class EqualContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)

        def EQUAL(self):
            return self.getToken(COOLParser.EQUAL, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqual" ):
                listener.enterEqual(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEqual" ):
                listener.exitEqual(self)


    class TrueContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def TRUE(self):
            return self.getToken(COOLParser.TRUE, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTrue" ):
                listener.enterTrue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTrue" ):
                listener.exitTrue(self)


    class LessEqualContext(ExpressionContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a COOLParser.ExpressionContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(COOLParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(COOLParser.ExpressionContext,i)
